name:               monadIO
version:            0.9
synopsis:           Overloading of concurrency variables
description:        MonadIO provides for many IO operations to be
                    overloaded over other IO-like monads.
category:           Concurrency
license:            BSD3
license-file:       LICENSE
author:             John Launchbury
maintainer:         John Launchbury
Copyright:          (c) 2008-2010, Galois, Inc.
cabal-version:      >= 1.2.0
build-type:         Simple


Library
  Extensions:       
  Build-Depends:    base >= 4,
                    stm,
                    mtl
  Exposed-modules:  Control.Concurrent.MonadIO
                    Control.Concurrent.STM.MonadIO
                    Control.Concurrent.StdInOut
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall -O2
